adjusting rows with bootstrap to avoid overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@ body {
     background-color: #1c2135;
 }
 
+.row {
+    margin: 0;
+    padding: 0;
+}
+
 /*--media--*/
 
 @media (max-width: 576px) { 
